--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "serde_json_matcher"
-version = "0.1.0"
+name = "serde-matcher"
+version = "0.1.1"
 edition = "2021"
 license = "Apache-2.0"
 description = "A library for matching JSON data using a declarative syntax"
