--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "serde_json_matcher"
 version = "0.1.3"
-edition = "2021"
+edition = "2018"
 license = "Apache-2.0"
 description = "A library for matching JSON data using a declarative syntax"
 tags = ["serde"]
 repository = "https://github.com/ianatha/serde_json_matcher"
 readme = "README.md"
+rust-version = "1.36"
 
 [dependencies]
 serde = { version = "1.0.151", features = ["derive"] }
