--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "serde_json_matcher"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2018"
 license = "Apache-2.0"
 description = "A library for matching JSON data using a declarative syntax"
@@ -10,5 +10,5 @@ readme = "README.md"
 rust-version = "1.36"
 
 [dependencies]
-serde = { version = "1.0.151", features = ["derive"] }
+serde = { version = "^1.0.149", features = ["derive"] }
 serde_json = "1.0.90"
